--- a/index.html
+++ b/index.html
@@ -18,11 +18,16 @@
             </ul>
         </div>
         <div class="add-to-do">
+            
+            <form class="" action="index.html" method="post">
             <i class="far fa-plus-circle"></i>
+            <div class="tasks"></div>
             <input type="text" id="input" placeholder="Add a to-do">
+            </form> 
         </div>
     </div>
-    <script src="delete.js"></script>
-    <script src="index.js"></script>
+    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="delete.js"></script>
+    
 </body>
 </html>
