added form tag and div textcontainer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="header">
             <div id="date"></div>
         </div>
+       <div class="text-container">
         <div class="content">
             <ul  id="list">
             </ul>
@@ -23,9 +24,13 @@
             <i class="far fa-plus-circle"></i>
             <div class="tasks"></div>
             <input type="text" id="input" placeholder="Add a to-do">
-            </form> 
+            <button type="submit"> ADD </button> 
+        </form> 
         </div>
+    </div>  
     </div>
+
+
     <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="delete.js"></script>
     
