--- a/index.html
+++ b/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do List </title>
-    <link rel="stylesheet" href="https://fonts.google.googleapis.com/css?family=Titillium+Web">
-    <link rel="stylesheet" href="css/font-awesome.css">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>To Do List</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.google.googleapis.com/css?family=Titillium+Web"
+    />
+    <!-- <link rel="stylesheet" href="css/font-awesome.css" /> -->
+    <link rel="stylesheet" href="src/styles.css" />
+  </head>
+  <body>
     <div class="container">
-        <div class="header">
-            <!-- <div class="clear">
-                <i class="fa fa-refresh">
-                </i>
-            </div> -->
-            <div id="date"></div>
-        </div>
+      <div class="header">
+        <div id="date"></div>
+      </div>
+      <div class="text-container">
         <div class="content">
-            <ul  id="list">
-            </ul>
+          <ul id="list">
+              <!-- <li class="task">
+                  <input type="checkbox" name="my-checkbox" id="opt-in">
+                  <label for="opt-in" class="finishedTask">Example Item</label> 
+              </li> -->
+        </ul>
         </div>
         <div class="add-to-do">
+          <form method="post">
             <i class="far fa-plus-circle"></i>
-            <input type="text" id="input" placeholder="Add a to-do">
+            <div class="tasks"></div>
+            <input type="text" id="input" placeholder="Add a to-do" />
+            <button type="submit">ADD</button>
+          </form>
         </div>
+      </div>
     </div>
-    <script src="delete.js"></script>
+  </body>
+</html>
+<script type="text/javascript" src="src/index.js"></script>
+<!-- <script type="text/javascript" src="delete.js"></script> -->
+
 </body>
 </html>
+
+
